[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/chave.png" type="Texture" id=1]
[ext_resource path="res://Images/chave_luz.png" type="Texture" id=2]
[ext_resource path="res://Script/Chave.gd" type="Script" id=3]
[ext_resource path="res://Audio/SFX/Chave_V1.wav" type="AudioStream" id=4]


[sub_resource type="CircleShape2D" id=1]
radius = 47.0106

[node name="Chave" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 2 )
mode = 2

[node name="Ativando" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ativando"]
modulate = Color( 0.921569, 0.0470588, 0.0470588, 1 )
shape = SubResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -11.0
margin_right = 10.0
margin_bottom = 10.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Ativando" to="." method="_on_Ativando_body_entered"]
[connection signal="body_exited" from="Ativando" to="." method="_on_Ativando_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
